# calamares

./: .gitmodules  CMakeLists.txt  CalamaresAddBrandingSubdirectory.cmake  README.md  settings.conf
src/branding/: CMakeLists.txt
src/branding/.tx/: config
src/branding/default/: branding.desc
src/branding/kaos_branding/: branding.desc  show.qml
src/branding/kaos_branding/.tx/: config
src/branding/kaos_branding/lang/: calamares-kaos_branding_ar.ts  calamares-kaos_branding_ast.ts  calamares-kaos_branding_ca.ts  calamares-kaos_branding_cs.ts  calamares-kaos_branding_de.ts  calamares-kaos_branding_en.ts  calamares-kaos_branding_es.ts  calamares-kaos_branding_es_AR.ts  calamares-kaos_branding_fr.ts  calamares-kaos_branding_he.ts  calamares-kaos_branding_hr_HR.ts  calamares-kaos_branding_hu.ts  calamares-kaos_branding_id_ID.ts  calamares-kaos_branding_it.ts  calamares-kaos_branding_nl_BE.ts  calamares-kaos_branding_nl_NL.ts  calamares-kaos_branding_pl.ts  calamares-kaos_branding_pt_BR.ts  calamares-kaos_branding_pt_PT.ts  calamares-kaos_branding_ro_RO.ts  (+9 more)
src/branding/lang/: CMakeLists.txt  calamares-kaos_branding_ar.ts  calamares-kaos_branding_ast.ts  calamares-kaos_branding_cs.ts  calamares-kaos_branding_de.ts  calamares-kaos_branding_en.ts  calamares-kaos_branding_es.ts  calamares-kaos_branding_es_AR.ts  calamares-kaos_branding_fr.ts  calamares-kaos_branding_hu.ts  calamares-kaos_branding_id_ID.ts  calamares-kaos_branding_nl_NL.ts  calamares-kaos_branding_pt_BR.ts  calamares-kaos_branding_pt_PT.ts  calamares-kaos_branding_sr_RS.ts  calamares-kaos_branding_tr_TR.ts
(+117 files in other folders)
